--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   </nav>
 
   <section id="home">
-    <img src="C:\Users\lalan\Downloads\WhatsApp Image 2025-09-03 at 11.09.41.jpeg" alt="Foto Pasha Ramadhan" class="profile">
+    <img src="WhatsApp Image 2025-09-03 at 11.09.41.jpeg" alt="Foto Pasha Ramadhan" class="profile">
     <h2>Selamat Datang!</h2>
     <p>Halo, saya <strong>Pasha Ramadhan</strong>. Berikut adalah portofolio sederhana saya.</p>
   </section>
@@ -110,7 +110,7 @@
       <li>Membuat dan mengolah data dengan Excel</li>
       <li>Membereskan berkas-berkas penting</li>
     </ul>
-    <a href="c:\Users\lalan\Downloads\WhatsApp Image 2025-09-03 at 11.33.42.jpeg" class="btn" download>📄 Download CV</a>
+    <a href="WhatsApp Image 2025-09-03 at 11.33.42.jpeg" class="btn" download>📄 Download CV</a>
   </section>
 
   <section id="contact">
@@ -125,4 +125,5 @@
     <p>© 2025 Pasha Ramadhan | Portofolio</p>
   </footer>
 </body>
+
 </html>
